tests/baselines/reference/excessPropertyCheckSpreadFunctionParam.errors.txt
excessPropertyCheckSpreadFunctionParam.ts(17,3): error TS2559: Type '{ c: number; }' has no properties in common with type 'Params'.
excessPropertyCheckSpreadFunctionParam.ts(27,3): error TS2559: Type '{ c: number; }' has no properties in common with type 'Params'.
excessPropertyCheckSpreadFunctionParam.ts(28,3): error TS2559: Type '{ c: number; }' has no properties in common with type 'Params'.
excessPropertyCheckSpreadFunctionParam.ts(30,3): error TS2559: Type '{ c: number; }' has no properties in common with type 'Params'.


==== excessPropertyCheckSpreadFunctionParam.ts (4 errors) ====
    type Params = {
        a?: any;
        b?: any;
    }
      
    function f(params: Params) {
        return;
    }
    
    const objWithAllowedKeys = { a: 2 }
    const objWithForbiddenKeys = { c: 2 }
    const objWithNoKeys = {}
    const a = 2;
    const c = 2;
    
    f({ ...objWithAllowedKeys })
    f({ ...objWithForbiddenKeys })
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2559: Type '{ c: number; }' has no properties in common with type 'Params'.
    f({ ...objWithAllowedKeys, ...objWithForbiddenKeys })
    
    f({ ...{ a: 2 }, ...{ c: 2 } })
    f({ ...{ a: 2, c: 2 } })
    f({ ...{ c: 2 }, ...{ b: 2 } })
    
    f({ ...{ a: 2 }, ...objWithForbiddenKeys })
    
    f({ ...{ c: 2 }, ...objWithAllowedKeys })
    f({ ...{ c: 2 }, ...objWithForbiddenKeys })
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2559: Type '{ c: number; }' has no properties in common with type 'Params'.
    f({ ...{ c: 2 }, ...objWithNoKeys })
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2559: Type '{ c: number; }' has no properties in common with type 'Params'.
    
    f({ ...{...{ c: 2 }, ...objWithNoKeys } })
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2559: Type '{ c: number; }' has no properties in common with type 'Params'.
    
    f({ a, ...{ c: 2 } })
    f({ a, ...{ c } })
    f({ ...{ c }, ...objWithAllowedKeys })
    
    
    
    
    